--- a/src/app/components/terminal/terminal.component.css
+++ b/src/app/components/terminal/terminal.component.css
@@ -109,6 +109,19 @@
   animation: blink 1s step-end infinite;
 }
 
+#gradient-canvas {
+  width: 100%;
+  height: 100%;
+  --gradient-color-1: #a960ee;
+  --gradient-color-2: #ff333d;
+  --gradient-color-3: #90e0ff;
+  --gradient-color-4: #ffcb57;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 @keyframes blink {
   0%,
   100% {
