--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,10 @@ body {
 }
 
 section {
-  padding: 0 20px;
+  padding: 80px 20px;
 }
 
-.about, .hobbies {
+.about, .hobbies, .github-stats {
   background-color: rgb(52, 52, 52);
   color: white;
 }
