--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <section class="terminal">
+    <canvas id="gradient-canvas"></canvas>
+    <section class="terminal-container">
         <app-terminal></app-terminal>
     </section>
   
