--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,14 @@ section {
   color: white;
 }
 
+.terminal-container {
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .skills {
   padding: 0;
 }
