--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -44,6 +44,17 @@ h2 {
   color: #757575;
 }
 
+#gradient-canvas {
+  width: 100%;
+  height: 100%;
+  --gradient-color-1: #a960ee;
+  --gradient-color-2: #ff333d;
+  --gradient-color-3: #90e0ff;
+  --gradient-color-4: #ffcb57;
+  z-index: -1;
+  position: absolute;
+}
+
 @media (max-width: 768px) {
   .about-content {
     flex-direction: column;
