--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -4,6 +4,11 @@ header {
   padding: 15px 0;
 }
 
+/* Add this to dynamically measure and set header height */
+:host {
+  display: block;
+}
+
 .header-container {
   display: flex;
   justify-content: space-between;
