feat: Refactor header component styles and structure for improved layout and readability

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container header-container">
       <div class="logo">
-        <a routerLink="/">Missclick.net</a>
+        <a routerLink="/" class="header-title">Missclick.net</a>
       </div>
       <nav>
         <ul>
