--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -1,7 +1,32 @@
 header {
-  background-color: white;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 15px 0;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 2vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(88,27,153,0.95), rgba(217,79,79,0.95));
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+.header-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+
+.logo a {
+  color: white;
+}
+
+nav a {
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.85);
+}
+
+nav a:hover{
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
 }
 
 /* Add this to dynamically measure and set header height */
@@ -13,13 +38,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.logo a {
-  color: var(--primary-color);
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-decoration: none;
+  width: 100%;
 }
 
 nav ul {
@@ -28,21 +47,6 @@ nav ul {
   margin: 0;
   padding: 0;
   gap: 20px;
-}
-
-nav a {
-  color: var(--text-color);
-  text-decoration: none;
-  font-weight: 500;
-  padding: 5px 10px;
-  border-radius: 4px;
-  transition: all 0.3s;
-}
-
-nav a:hover,
-nav a.active {
-  background-color: var(--primary-color);
-  color: white;
 }
 
 @media (max-width: 768px) {
