--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,10 @@ section {
 .skills {
   padding: 0;
 }
+
+.invisible-btn {
+  padding: 0;
+  background: transparent;
+  cursor: pointer;
+  border: none;
+}
