--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,14 +4,24 @@
       <a routerLink="/" class="header-title">Missclick.net</a>
     </div>
     <nav>
-      <ul>
-        <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
-        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-        <li><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
-        <li><a href="#" (click)="toggleContactModal($event)" [class.active]="isModalOpen">Contact</a></li>
-      </ul>
+      <button class="invisible-btn menu-toggle" [class.open]="isSidebarOpen" (click)="toggleMenu()">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+      </button>
     </nav>
   </div>
 </header>
+
+<div class="sidebar" [class.open]="isSidebarOpen">
+  <div class="sidebar-content">
+    <ul>
+      <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+      <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+      <li><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
+      <li><a href="#" (click)="toggleContactModal($event)" [class.active]="isModalOpen">Contact</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="sidebar-overlay" [class.open]="isSidebarOpen" (click)="closeSidebar()"></div>
 
 <app-contact-modal [isOpen]="isModalOpen" (closeModalEvent)="closeModal()"></app-contact-modal>
