feat: Refines GitHub stats and styles hobbies section
Removes debugging log from GitHub stats component for cleaner output.
Overhauls hobbies section with new layout, styles, and image inclusion.
Streamlines global styles by removing unused class reference.

--- a/src/app/components/hobbies/hobbies.component.html
+++ b/src/app/components/hobbies/hobbies.component.html
@@ -1,1 +1,11 @@
-<p>hobbies works!</p>
+<div class="hobbies-container">
+    <div class="hobbie-element">
+        <div class="hobbie-desc">
+            <h2>Hobbies</h2>
+            <p>Here are some of my hobbies:</p>
+        </div>
+        <div class="hobbie-image">
+            <img src="assets/hobbies/piano.png" alt="Hobbies Image">
+        </div>
+    </div>
+</div>
