--- a/src/app/components/hobbies/hobbies.component.html
+++ b/src/app/components/hobbies/hobbies.component.html
@@ -2,12 +2,14 @@
     <div class="slider-navigation">
       <button class="arrow left-arrow" (click)="previousSlide()">&#10094;</button>
       
-      <div class="hobbie-element">
+      <div class="hobbie-element" [ngClass]="{'replace-background': hobbies[currentIndex].replaceBackground}"
+           [ngStyle]="hobbies[currentIndex].replaceBackground ? 
+                     {'background-image': '-webkit-linear-gradient(-20deg, rgba(255, 255, 255, 0.9) 45%, transparent 0%), url(' + hobbies[currentIndex].imageUrl + ')'} : {}">
         <div class="hobbie-desc">
           <h2>{{ hobbies[currentIndex].title }}</h2>
           <p>{{ hobbies[currentIndex].description }}</p>
         </div>
-        <div class="hobbie-image">
+        <div class="hobbie-image" *ngIf="!hobbies[currentIndex].replaceBackground">
           <img [src]="hobbies[currentIndex].imageUrl" [alt]="hobbies[currentIndex].title">
         </div>
       </div>
@@ -21,4 +23,4 @@
             (click)="currentIndex = i">
       </span>
     </div>
-  </div>
+</div>
