--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,3 +1,14 @@
+.about-container {
+  background-image: url('/assets/backgrounds/cloud.png');
+  background-size: cover;
+  padding: 120px 100px;
+}
+
+.about-container h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
 .about-content {
   display: flex;
   gap: 30px;
@@ -5,10 +16,11 @@
 }
 
 .about-image {
-  flex: 1;
+  width: 35%;
 }
 .about-text {
-  flex: 2;
+  font-family: 'Courier New', Courier, monospace;
+  width: 65%;
 }
 
 .about-text p {
