feat: Enhances About component with dynamic image display
Adds a rotating image feature to the About component using a timer. Updates HTML and CSS for improved layout and styling. Ensures proper lifecycle management by implementing OnInit and OnDestroy hooks.

Improves user experience through dynamic visual content.

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -11,15 +11,27 @@
 
 .about-content {
   display: flex;
-  gap: 30px;
+  gap: 50px;
   align-items: center;
 }
 
 .about-image {
   width: 35%;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.about-text {
+
+.about-image img {
+  width: 90%;
+}
+
+p {
   font-family: 'Courier New', Courier, monospace;
+}
+
+.about-text {
   width: 65%;
 }
 
