--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,19 +1,20 @@
 <div class="about-container">
   <div class="about-content">
     <div class="about-image">
-      <div class="placeholder-image">Profile Image</div>
+      <img id="about-img" [src]="currentImage" alt="About me image"/>
     </div>
     <div class="about-text">
       <h2>ABOUT ME</h2>
-      <p>Hello! I'm Gabriel, and I’ve been passionate about programming since my first year of studies.
+      <p>Hello! I'm Gabriel, and I've been passionate about programming since my first year of studies.
         Over the years, I have built experience in web development, software engineering, video game creation, and DevOps.
       </p>
       <p>I enjoy exploring new technologies and appreciate how the ever-evolving field of IT constantly challenges me to learn and grow.
         I love the logical side of programming and thinking about how to design optimized, efficient solutions.
         I also take great pleasure in creating applications that are both user-friendly and visually appealing, reflecting my personal style.
       </p>
-      <p> In my free time, I’m passionate about video games, playing the piano, and esports.
-        I also really enjoy socializing, expanding my knowledge, and developing my own perspectives on a wide range of topics.</p>
     </div>
   </div>
+  <p> In my free time, I'm passionate about video games, playing the piano, and esports.
+    I also really enjoy socializing, expanding my knowledge, and developing my own perspectives on a wide range of topics.
+  </p>
 </div>
