feat: refractor images path and add Video Games as hobbie

--- a/src/app/components/github-stats/github-stats.component.html
+++ b/src/app/components/github-stats/github-stats.component.html
@@ -10,7 +10,7 @@
   <!-- Windows XP Taskbar -->
   <div class="windows-taskbar">
     <div class="start-button" (click)="playSound()">
-      <img src="assets/icons/winxp-start.png" alt="Start" class="start-logo">
+      <img src="assets/images/icons/winxp-start.png" alt="Start" class="start-logo">
     </div>
     <div class="taskbar-time">
       <span>{{ currentTime | date:'h:mm a' }}</span>
@@ -43,38 +43,38 @@
             <span class="toolbar-text">Help</span>
           </div>
           <div class="toolbar-icon">
-            <img src="assets/icons/winxp-logo.png" alt="Windows XP Icon" class="toolbar-img">
+            <img src="assets/images/icons/winxp-logo.png" alt="Windows XP Icon" class="toolbar-img">
           </div>
         </div>
         
         <!-- Trash items -->
         <div class="trash-item">
-          <img src="assets/icons/deleted-file.png" alt="Deleted Text File">
+          <img src="assets/images/icons/deleted-file.png" alt="Deleted Text File">
           <span>unused_code.js</span>
         </div>
         
         <div class="trash-item">
-          <img src="assets/icons/deleted-img.png" alt="Deleted Image">
+          <img src="assets/images/icons/deleted-img.png" alt="Deleted Image">
           <span>old_logo.png</span>
         </div>
         
         <div class="trash-item">
-          <img src="assets/icons/rn.png" alt="Front National">
+          <img src="assets/images/icons/rn.png" alt="Front National">
           <span>fachos.jpg</span>
         </div>
         
         <div class="trash-item">
-          <img src="assets/icons/deleted-file.png" alt="Deleted Text File">
+          <img src="assets/images/icons/deleted-file.png" alt="Deleted Text File">
           <span>bugs_fixed.txt</span>
         </div>
         
         <div class="trash-item">
-          <img src="assets/icons/deleted-file.png" alt="Deleted Text File">
+          <img src="assets/images/icons/deleted-file.png" alt="Deleted Text File">
           <span>todo_v1.md</span>
         </div>
         
         <div class="trash-item">
-          <img src="assets/icons/deleted-img.png" alt="Deleted Image">
+          <img src="assets/images/icons/deleted-img.png" alt="Deleted Image">
           <span>screenshot.jpg</span>
         </div>
       </div>
