--- a/src/app/components/github-stats/github-stats.component.css
+++ b/src/app/components/github-stats/github-stats.component.css
@@ -378,8 +378,16 @@
 }
 
 .github-stats-container {
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 80px 60px;
+  gap: 30px;
+}
+
+h2 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 2.5rem;
 }
 
 .stats-cards {
