--- a/src/app/components/github-stats/github-stats.component.css
+++ b/src/app/components/github-stats/github-stats.component.css
@@ -1,4 +1,3 @@
-/* Windows XP Desktop */
 .windows-xp-desktop {
   position: relative;
   width: 100%;
@@ -7,12 +6,11 @@
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  border-radius: 8px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
   font-family: "Tahoma", "Segoe UI", sans-serif;
+  box-shadow: inset 0 0 80px 15px #d5eff0;
 }
 
-/* Desktop Icons */
 .desktop-icons {
   padding: 20px;
   display: grid;
@@ -63,7 +61,6 @@
   padding: 0 10px;
 }
 
-/* Windows XP Taskbar */
 .windows-taskbar {
   position: absolute;
   bottom: 0;
@@ -114,7 +111,6 @@
   color: white;
 }
 
-/* Windows XP Modal */
 .windows-modal {
   position: absolute;
   top: 50%;
@@ -257,27 +253,6 @@
   animation-delay: 0.2s; /* slight delay after modal appears */
 }
 
-@keyframes fadeInSlide {
-  from {
-    opacity: 0;
-    transform: translateX(-20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-.github-card {
-  max-width: 100%;
-  border-radius: 6px;
-}
-
 .github-stats {
   background-color: var(--light-bg);
   border-radius: 8px;
@@ -377,6 +352,11 @@
   margin: 10px;
 }
 
+.github-stats-info {
+  position: relative;
+  animation: floatUpDown 6s ease-in-out infinite;
+}
+
 .github-stats-container {
   display: flex;
   justify-content: space-evenly;
@@ -414,9 +394,43 @@ h2 {
   max-width: 100%;
   height: auto;
   display: block;
+  border-radius: 6px;
 }
 
-/* Responsive adjustments */
+@keyframes fadeInSlide {
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@keyframes floatUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-75px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(75px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 @media (max-width: 768px) {
   .stats-cards {
     flex-direction: column;
