--- a/src/app/components/terminal/terminal.component.html
+++ b/src/app/components/terminal/terminal.component.html
@@ -1,5 +1,5 @@
 <div class="terminal-div">
-  <div class="terminal">
+  <div class="terminal-container">
     <div class="terminal-header">
       <div class="terminal-buttons">
         <div class="terminal-button red"></div>
