--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <section class="terminal-container">
+  <section class="terminal">
     <canvas id="gradient-canvas"></canvas>
     <app-terminal></app-terminal>
   </section>
