--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
   background-image: url("/assets/images/backgrounds/cloud.gif");
 }
 
-.terminal-container {
+.terminal {
   padding: 0;
   height: calc(100vh - var(--header-height, 0px));
   display: flex;
