feat: update terminal command handling and improve section navigation

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,26 +1,26 @@
 <div class="container">
-  <section class="terminal">
+  <section id="terminal" class="terminal">
     <canvas id="gradient-canvas"></canvas>
     <app-terminal></app-terminal>
   </section>
 
-  <section class="about">
+  <section id="about" class="about">
     <app-about></app-about>
   </section>
 
-  <section class="skills">
+  <section id="skills" class="skills">
     <app-skills></app-skills>
   </section>
 
-  <section class="hobbies">
+  <section id="hobbies" class="hobbies">
     <app-hobbies></app-hobbies>
   </section>
 
-  <section class="github-stats">
+  <section id="github-stats" class="github-stats">
     <app-github-stats></app-github-stats>
   </section>
 
-  <section class="projects">
+  <section id="projects" class="projects">
     <app-projects></app-projects>
   </section>
 </div>
